--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/traffic_light"
-        android:label="@string/app_name"
+        android:label="紅綠燈(李億剛)"
         android:roundIcon="@drawable/traffic_light"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".GameActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
