--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/traffic_light"
-        android:label="紅綠燈(李億剛)"
+        android:label="@string/app_name"
         android:roundIcon="@drawable/traffic_light"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
